--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,17 +18,19 @@ jobs:
       with:
         python-version: "3.10"
         
-    - name: Install dependencies
+    - name: Debug Files
+      run: ls -R
+        
+    # AQUÍ ESTÁ EL TRUCO: Fijamos la versión ==0.9.0 para que coincida con tu PC
+    - name: Install dependencies manually
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install "typer[all]==0.9.0" rich
         
-    - name: Run Analysis in CI Mode (Low Noise)
+    - name: Run Analysis in CI Mode
       run: |
-        python main.py analyze --simulations 500 --noise 0.05 --output test_results.json
+        python main.py analyze --simulations 500 --noise 0.05 --ci-mode --output test_results.json
         
     - name: Verify JSON Report
       run: |
         ls -l test_results.json
-        cat test_results.json
-
