--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,34 +3,20 @@ name: Q-Drift CI Pipeline
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
-    
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-        
-    - name: Debug Files
-      run: ls -R
-        
-    - name: Install dependencies manually
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install "typer[all]==0.9.0" rich
-        
-    - name: Run Analysis in CI Mode
-      run: |
-        python main.py analyze --simulations 500 --noise 0.05 --ci-mode --output test_results.json
-        
-    - name: Verify JSON Report
-      run: |
-        ls -l test_results.json
-
+        # Instalamos las versiones más recientes y estables
+        pip install typer[all] rich 
+    - name: Run Test
+      run: python main.py analyze --simulations 100 --noise 0.05 --ci-mode --output test.json
